# Simple-Message-Board2

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
public/: app.css  app.js
public/themes/: theme-cyberpunk.css  theme-dark.css  theme-light.css
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs  utils.rs
src/db/: models.rs  repository.rs
src/handlers/: api.rs  dashboard.rs  home.rs  mod.rs
templates/: dashboard.html  home.html
tests/: api_integration_test.rs  cli_integration_test.rs  handlers_helper_test.rs  repository_test.rs  security_test.rs  static_files_test.rs  utils_test.rs
