[package]
name = "message_board"
version = "1.3.5"
edition = "2021"

[lib]
name = "message_board"
path = "src/lib.rs"

[[bin]]
name = "message_board"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"

[dev-dependencies]
actix-rt = "2"
tempfile = "3.26.0"
